[package]
name = "adaptive"
version = "0.1.0"
edition = "2021"
authors = ["Jeff Shen <jshen2014@hotmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
description = "Adaptive sampling of functions."
repository = "https://github.com/al-jshen/adaptive"

categories = ["science"]
keywords = ["computing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
